--- a/package.json
+++ b/package.json
@@ -42,5 +42,16 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
+  },
+  "description": "This project was created using React, Redux (using connect), HTML, CSS, and font awesome.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/natalievasquez11/js-calculator.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/natalievasquez11/js-calculator/issues"
   }
 }
